<resources>
    <string name="network_not_good">网络不给力</string>
    <string name="app_name">66配送平台</string>
    <string name="welcome_back">欢迎回来</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">我的</string>
    <string name="title_notifications">订单</string>
    <string name="title_address_send">寄件信息</string>
    <string name="title_address_receive">收件信息</string>
    <string name="info_warning">请勿配送违禁品及价值超过3000元以上物品。如物品丢失或损坏，由配送服务提供方核查并处理</string>
    <string name="dialog_first_one">隐私政策</string>
    <string name="dialog_first_two">欢迎您使用</string>
    <string name="dialog_first_agreement">《用户协议》</string>
    <string name="dialog_first_privacy">《隐私政策》</string>
    <string name="dialog_first_eight">\n相关条</string>
    <string name="dialog_first_nine">\n款。在您同意并接受后，将可以正常使用本产</string>
    <string name="dialog_first_content">本应用尊重并保护所有用户的个人隐私权。为了给您提供更准确、更有个性化的服务，本应用会按照隐私政策的规定使用和披露您的个人信息。可阅读</string>
    <string name="dialog_first_agree">同意</string>
    <string name="dialog_first_disagree">不同意并退出APP</string>
    <string name="talk_something">想说点什么</string>
    <string name="num_two_hundred">0/200</string>
    <string name="cancel">取消</string>
    <string name="input_qsr">请输入..</string>
    <string name="sure">确定</string>
    <string name="no_data">暂无数据</string>
    <string name="net_work_error">网络错误</string>
    <string name="refresh">刷新</string>
    <string name="loading_data">加载中</string>
    <string name="noting">暂无评论..</string>
    <string name="no_dynamic">暂无动态</string>
    <string name="user_agreement_txt">
        请您本产品之前，请务必仔细阅读并理解《用户协议》（以下简称“本协议”）中规定的多有权利和限制。
        我们一向尊重并会严格保护用户在使用本产品时的合法权益（包括用户隐私、用户数据等）不受到任何侵犯。
        本协议（包括本文最后部分的隐私政策）是用户（包括通过各种合法途径获取到本产品的自然人、法人或其他组织机构，以下简称“用户”或“您”）与我们之间针对本产品相关事项最终的、完整的且排他的协议，并取代、合并之前的当事人之间关于上述事项的讨论和协议。
        本协议将对用户使用本产品的行为产生法律约束力，您已承诺和保证有权利和能力订立本协议。用户开始使用本产品将视为已经接受本协议，请认真阅读并理解本协议中各种条款，包括免除和限制我们的免责条款和对用户的权利限制（未成年人审阅时应由法定监护人陪同），如果您不能接受本协议中的全部条款，请勿开始使用本产品。
        \n
        \n

        使用账户
        \n
        \n

        您必须承诺和保证：\n
        1. 您使用本产品的行为必须合法
        本产品将会依据本协议“修改和终止”的规定保留或终止您的账户。您必须承诺对您的登录信息保密、不被其他人获取与使用，并且对您在本账户下的所有行为负责。您必须将任何有可能触犯法律的、未授权使用或怀疑为未授权使用的行为在第一时间通知本产品。本产品不对您因未能遵守上述要求而造成的损失承担法律责任。
        \n
        \n

        终端用户协议许可
        \n
        \n

        依据本协议规定，本产品将授予您以下不可转让的、非排他的许可：\n
        1.使用本产品的权利；\n
        2.在您所有的网络通信设备、计算机设备和移动通信设备上下载、安装、使用本产品的权利。\n

        \n
        限制性条款\n

        \n
        本协议对您的授权将受到以下限制：\n
        1. 您不得对本产品进行任何形式的许可、出售、租赁、转让、发行或其他商业用途；\n
        2. 除非法律禁止此类限制，否则您不得对本产品的任何部分或衍生产品进行修改、翻译、改编、合并、利用、分解、改造或反向编译、反向工程等；\n
        3. 您不得以创建相同或竞争服务为目的使用本产品；\n
        4. 除非法律明文规定，否则您不得对本产品的任何部分以任何形式或方法进行生产、复制、发行、出售、下载或显示等；\n
        5. 您不得删除或破坏包含在本产品中的任何版权声明或其他所有权标记。\n


        \n
        版本\n

        任何本产品的更新版本或未来版本、更新或者其他变更将受到本协议约束。\n

        \n
        遵守法律\n

        您同意遵守《中华人民共和国合同法》、《中华人民共和国著作权法》及其实施条例、《全国人民代表大会常务委员会关于维护互联网安全的决定》（“人大安全决定”）、《中华人民共和国保守国家秘密法》、《中华人民共和国电信条例》（“电信条例“）、《中华人民共和国计算机信息系统安全保护条例》、《中华人民共和国计算机信息网络国际联网管理暂行规定》及其实施办法、《计算机信息系统国际联网保密管理规定》、《互联网信息服务管理办法》、《计算机信息网络国际联网安全保护管理办法》、《互联网电子公告服务管理规定》（“电子公告规定”）等相关中国法律法规的任何及所有的规定，并对以任何方式使用您的密码和您的账号使用本服务的任何行为及其结果承担全部责任。如违反《人大安全决定》有可能构成犯罪，被追究刑事责任。《电子公告规定》则有明文规定，上网用户使用电子公告服务系统对所发布的信息负责。《电信条例》也强调，使用电信网络传输信息的内容及其后果由电信用户负责。在任何情况下，如果本网站有理由认为您的任何行为，包括但不限于您的任何言论和其它行为违反或可能违反上述法律和法规的任何规定，本网站可在任何时候不经任何事先通知终止向您提供服务。
        \n
        \n

        用户内容\n

        \n
        1.用户内容是指该用户下载、发布或以其他方式使用本产品时产生的所有内容（例如：您的信息、图片、音乐或其他内容）。\n
        2.您是您的用户内容唯一的责任人，您将承担因您的用户内容披露而导致的您或任何第三方被识别的风险。\n
        3.您已同意您的用户内容受到权利限制（详见“权利限制”）\n

        \n
        权利限制\n
        \n
        您已同意通过分享或其他方式使用本产品中的相关服务，在使用过程中，您将承担因下述行为所造成的风险而产生的全部法律责任：
        \n1.破坏宪法所确定的基本原则的；
        \n2.危害国家安全、泄露国家秘密、颠覆国家政权、破坏国家统一的；
        \n3.损害国家荣誉和利益的；
        \n4.煽动民族仇恨、民族歧视，破坏民族团结的；
        \n5.破坏国家宗教政策，宣扬邪教和封建迷信的；
        \n6.散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；
        \n7.侮辱或者诽谤他人，侵害他人合法权益的；
        \n8.含有法律、行政法规禁止的其他内容的。
        \n您已经同意不在本产品从事下列行为：
        \n1.发布或分享电脑病毒、蠕虫、恶意代码、故意破坏或改变计算机系统或数据的软件；
        \n2.未授权的情况下，收集其他用户的信息或数据，例如电子邮箱地址等；
        \n3.用自动化的方式恶意使用本产品，给服务器造成过度的负担或以其他方式干扰或损害网站服务器和网络链接；
        \n4.在未授权的情况下，尝试访问本产品的服务器数据或通信数据；
        \n5.干扰、破坏本产品其他用户的使用。
        \n

        \n修改和终止

        \n
        \n修改

        \n
        \n本协议容许变更。如果本协议有任何实质性变更，我们将通过电子邮件来通知您。变更通知之后，继续使用本产品则为您已知晓此类变更并同意条款约束；
        \n我们保留在任何时候无需通知而修改、保留或关闭本产品任何服务之权利；
        \n您已同意我们无需因修改、保留或关闭本产品任何服务之权利；
        \n您已同意我们无需因修改、保留或关闭本产品任何服务的行为对您或第三方承担责任。
        \n
        \n终止
        \n
        \n本协议自您接受之日起生效，在您使用本产品的过程中持续有效，直至依据本协议终止；
        \n尽管有上述规定，如果您使用本产品的时间早于您接受本协议的时间，您在此知晓并同意本协议于您接受本协议的时间，您在此知晓并同意本协议于您第一次使用本产品时生效，除非依据本协议提前终止；
        \n我们可能会依据法律的规定，保留您使用本产品或者本账户的权利；无论是否通知，我们将在任何时间以任何原因终止本协议，包括出于善意的相信您违反了我们可接受使用政策或本协议的其他规定；
        \n不受前款规定所限，如果用户侵犯第三人的版权且我们接到版权所有人或版权所有人的合法代理人的通知后，我们保留终止本协议的权利；
        \n一旦本协议终止，您使用本产品的权利即告终止。您应当知晓您的产品终止意味着您的用户内容将从我们的活动数据库中删除。我们不因终止本协议对您承担任何责任，包括终止您的用户账户和删除您的用户内容。

        \n
        \n第三方

        \n
        \n您已知晓或同意我们的部分服务时基于第三方的技术支持获得；
        \n您已知晓本协议是您在与我们之前签订，而非您与上述第三方之间签订。我们是基于本产品所产生的内容、维护、支持服务、保证和由此产生的诉讼等事项的唯一责任人。您已同意遵守且授权给本产品限制您有条件地使用本产品的服务。


        \n
        \n第三方信息和服务

        \n
        \n1.本产品包含了第三方的部分信息和服务。我们不控制且不对第三方的信息和服务负责；
        \n2.我们仅为您使用方便的目的或为承诺和保证第三方的需要而提供此类信息和服务；
        \n3.用户需对使用第三方信息和服务产生的风险承担法律责任；
        \n4.当用户访问第三方信息和服务时，适用第三方的条款和政策。


        \n
        \n赔偿

        \n
        \n您已同意无害地使用本产品，避免因下述行为或相关行为遭受来第三方的任何投诉、诉讼、损失、损害、责任、成本和费用（包括律师费）：
        \n1.用户使用本产品的行为；
        \n2.用户的用户内容；
        \n3.用户违反本协议的行为。

        \n
        \n我们保留专属抗辩权和请求赔偿的权利
        \n
        \n您已同意，除非获得我们书面同意，您不得在您与我们共同对第三方提起的诉讼中单方和解。

        \n我们将尽合理努力将此类诉讼、诉讼行为或进程通知您。

        \n在任何情况下，本产品都不对您或任何第三方因本协议产生的任何间接性、后果性、惩罚性的、偶然的、特殊或惩罚性的损害赔偿承担责任。访问、使用本产品所产生的损坏计算机系统或移动通讯设备数据的风险将由您个人承担。


        \n
        \n适用法律

        \n
        \n本协议适用中华人民共和国法律；
        \n如果双方发生纠纷，应本着友好的圆柱协商解决；如协商不成，应向所在地的法院提起诉讼。

        \n
        \n独立性

        \n本协议中的某些条款因故无法适用，则本协议的其他条款继续适用且无法适用的条款将会被修改，以便其能够依法适用。

        \n
        \n完整性
        \n本协议（包括隐私政策）是您和本产品之间关于本产品相关事项的最终的、完整的、排他的协议，且取代和合并之前当事人关于此类事项（包括之前的最终用户许可、服务条款和隐私政策）的讨论和协议；
        \n每部分的题目只为阅读之便而无任何法律或合同义务；\n
        除非我们书面同意，您不得转让本协议所规定的权利义务。任何违反上述规定企图转让的行为均无效。\n\n
    </string>
    <string name="privacy_policy_txt">
        隐私政策\n
        更新时间：【2021】年【12】月【 7 】日\n
        生效时间：【2021】年【12】月【 7 】日\n\n
        广州思辰信息科技有限公司（下称“我们”）非常重视您的隐私和个人信息，并始终致力于保护您的隐私。 为了您更好地使用 66配送平台 的服务，我们专门制定了本隐私政策，我们希望向您说明我们在您使用 66配送平台 的服务时收集何种信息以及如何收集、使用和保护这些信息。\n
        本政策适用于由我们开发和运营的 66配送平台 ，包括客户端（包括但不限于Android版本及更新版本）（以下称“本应用”）。\n
        在使用本应用服务前，请您务必仔细阅读我们的隐私政策。除非贵方已阅读并接受本协议的全部条款，否则请贵方立即停止使用本应用服务。 一旦贵方勾选或点击“同意《隐私政策》”按钮或以第三方平台账号登录或实际使用本应用服务，即视为贵方已充分理解并接受本隐私政策。\n\n
        第一部分 定义\n
        用户：下称“您”或“用户”，是指注册、登录、使用、浏览、获取本政策项下服务的个人或组织。\n
        个人信息：指以电子或者其他方式记录的能够单独或者与其他信息结合识别特定自然人身份或者反映特定自然人活动情况的各种信息，包括自然人姓名、出生日期、身份证号码、个人生物识别信息、住址、电话号码等。\n\n
        第二部分 隐私政策\n
        本隐私权政策部分将帮助您了解以下内容：\n
        一、如何收集、使用您的个人信息\n
        二、如何转让、公开披露、共享信息\n
        三、第三方sdk使用\n
        四、如何管理您的信息\n
        五、如何保护您的信息\n
        六、未成年人条款\n
        七、本隐私权政策如何更新\n
        八、适用范围\n
        九、如何开启和关闭权限\n
        十、访问隐私政策\n
        十一、联系我们\n\n
        一、如何收集、使用您的个人信息\n
        1、注册账号\n
        您注册本应用账号可向我们提供手机号并设置密码、或通过您认可的第三方账号授权注册；完成产品账号注册后，您可以自行决定是否需要完善您的头像、昵称、性别、生日、个性签名账号信息。如果您完善以上额外信息，将有助于我们为您提供更好的服务和体验，但如果您不提供上述信息，将不会影响您使用产品的基本功能。\n\n
        2、向您提供网络安全及运营安全保障\n
        为保障您的账号、网络、运营及系统安全，预防钓鱼网站欺诈及木马病毒，在您使用本产品的过程中，我们可能会自动收集您IP地址、浏览器的类型、使用的语言、访问日期和时间、软硬件特征信息及您的网页记录数据、电信运营商信息、设备信息包括设备品牌、设备识别码（如imei、imsi、idfa、mac,androidId），我们收集您的设备信息以便为您提供更适合的定制化服务，例如向您展示或推荐相关程度更高的广告/推广信息结果。\n\n
        3.相机权限\n
        获取相机用于更换头像和用户反馈\n
        66配送平台 收集个人信息明示清单\n
            (1) 业务场景:登录/注册 收集目的:用于注册账号，完善网络标识 收集方式:用户输入 个人信息:手机号码\n
            (2) 业务场景:填写收寄件地址信息 收集目的:用于提交寄件和收件地址以及用户的信息，完成相关服务 收集方式:用户输入 个人信息:手机号码、地理位置\n
            (3) 业务场景:编辑用户昵称 收集目的:用于上传更新用户资料 收集方式:用户输入 个人信息:昵称\n\n
        二、如何转让、公开披露、共享信息\n
        1、转让\n
        本应用不会将您的个人信息转让给任何公司、组织和个人，但以下情况除外：\n
        （1）获得您的明确同意后，我们会向其他方转让您的个人信息；\n
        （2）在本应用服务提供者发生合并、收购或破产清算情形，或其他涉及合并、收购或破产清算情形时，如涉及到个人信息转让，我们会要求新的持有您个人信息的公司、组织继续受本政策的约束，否则我们将要求该公司、组织或个人重新向您征求授权同意。\n\n
        2、公开披露
        本应用仅会在以下情况下，公开披露您的个人信息：\n
        （1）获得您明确同意或基于您的主动选择，我们可能会公开披露您的个人信息；\n
        （2）如果我们确定您出现违反法律法规或严重违反本应用相关协议及规则的情况，或为保护本应用用户或公众的人身财产安全免遭侵害，我们可能依据法律法规或征得您同意的情况下披露关于您的个人信息。\n\n
        3、共享\n
        （1）授权同意原则：未经您的同意，我们不会共享您的个人信息，除非共享的个人信息是去标识化或匿名化处理后的信息，且共享第三方无法重新识别此类信息的自然人主体。如果第三方使用信息的目的超越原授权同意范围，他们需要重新征得您的同意。\n
        （2）合法正当与最小必要原则：共享的数据必须具有合法正当目的，且共享的数据以达成目的必要为限。\n
        （3）安全审慎原则： 我们将审慎评估第三方使用共享信息的目的，对这些合作方的安全保障能力进行综合评估，并要求其遵循合作法律协议。我们会对合作方获取信息的软件工具开发包（SDK）、应用程序接口（API）进行严格的安全监测，以保护数据安全。\n\n
        三、第三方sdk技术使用\n
        SDK技术由我们合作的第三方机构提供,我们仅能知悉其要求获取授权的权。 第三方机构将会需要收取您的信息,我们无法获取您的信息，除非第三方机构明确向我们披露的要收集的敏感信息。 第三方机构要求获得的权限以及明确向我们披露的收集的敏感信息如下:\n\n
        1、友盟统计SDK\n
        信息获取:MAC地址、唯一设备识别码(IMEI/android ID/IDFA/OPENUDID/GUID、SIM卡IMSI信息)、地理位置信息\n
        使用目的:数据统计\n
        隐私政策地址: https://www.umeng.com/policy\n\n
        四、如何管理您的信息\n
        1、信息管理\n
        本应用非常重视您对个人信息的关注，并尽全力保护您对于自己个人信息访问、更正及删除的权利，以使您拥有充分的能力保障您的隐私和安全.\n
        2、信息删除\n
        联系方式： zedxta83610@chacuo.net\n
        你联系我们注销后，根据适用法律的要求删除您的个人信息，或进行匿名化处理，账号注销及账号信息删除一般在3-15个工作日内处理完成。\n\n
        五、如何保护您的信息\n
        1、为保障您的信息安全，本应用已采取符合业界标准的安全措施来保护您的信息，使您的信息不会被泄漏、毁损或者丢失，包括但不限于设置部署主机入侵检测系统、重要敏感数据加密存储、日志记录安全审计。\n
        2、本应用对可能接触到您的信息的员工采取了严格管理，包括但不限于根据岗位的不同采取不同的权限控制，与他们签署保密协议，监控他们的操作情况等措施。本应用会按现有技术提供相应的安全措施来保护您的信息，提供合理的安全保障，本应用将尽力做到使您的信息不被泄漏、毁损或丢失。\n
        3、您的帐号均有安全保护功能，请妥善保管您的帐号及密码信息。本应用将通过向其它服务器备份、对用户密码进行加密等安全措施确保您的信息不丢失，不被滥用和变造。互联网并非绝对安全的环境，尽管有前述安全措施，但同时也请您理解在信息网络上不存在“完善的安全措施”。\n
        4、在不幸发生个人信息安全事件后，我们将按照法律法规的要求向您告知：安全事件的基本情况和可能的影响、我们已采取或将要采取的处置措施、您可自主防范和降低风险的建议、对您的补救措施等。\n\n
        六、未成年人条款\n
        1、 若您是未满18周岁的未成年人，在使用本应用的相关服务前，应在您的父母或者其他监护人监护、指导下共同阅读并同意本隐私政策。\n
        2、 我们根据国家相关法律法规的规定保护未成年人的个人信息，只会在法律允许、父母或者其他监护人明确同意或保护未成年人所必要的情况下收集、使用、存储、共享、转让或披露未成年人的个人信息； 如果我们发现在未事先获的可证实的父母同意的情况下收集了未成年人的个人信息，则会设法尽快删除相关信息。\n
        3、 若您是未成年人的监护人，当您对您所监护的未成年人的个人信息有相关疑问时，请通过公司本隐私政策公示的联系方式与我们联系。\n\n
        七、本隐私权政策如何更新\n
        我们的隐私权政策可能变更。未经您明确同意， 66配送平台 不会限制您按照本政策所应享有的权利。我们会通过站内信或弹窗推送通知等合理方式告知您，以便您能及时了解本政策所做的任何变更。该等通知于发送之日视为已送达收件人并生效。\n
        若您不同意修改后的隐私权政策，您有权并应立即停止使用 66配送平台 的服务。如果您继续使用 66配送平台 的服务，则视为您接受 66配送平台 对本政策相关条款所做的修改。\n\n
        八、适用范围\n
        本应用提供的所有服务均适用本隐私政策。针对某些特定服务的特定隐私政策，将更具体地说明我们在该等服务中如何使用您的信息。该特定服务的隐私政策构成本隐私政策的一部分。如相关特定服务的隐私政策与本隐私政策有不一致之处，适用该特定服务的隐私政策。\n\n
        九、如何开启和关闭权限\n
        可在手机系统的设置-应用管理-找到APP-权限管理-关闭权限。\n\n
        十. 访问隐私政策\n
        您可以在本应用“设置”-“隐私政策”查看本隐私政策的全部内容。\n\n
        十一. 联系我们\n
        如果您对隐私政策有任何疑问、意见或者建议，通过以下方式与本应用联系：\n
        公司:广州思辰信息科技有限公司\n
        邮箱: zedxta83610@chacuo.net\n
    </string>
    <string name="title_message">消息</string>
    <string name="dialog_first_title">欢迎使用66配送平台</string>
</resources>
