<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="35dp"
        app:cardCornerRadius="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/dialog_first_title"
                android:textColor="@color/black_001"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/dialog_first_one"
                android:textColor="@color/black_001"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content"
                android:lineHeight="40sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1"
                android:padding="20dp"
                android:text="@string/dialog_first_content"
                android:textColor="@color/black_001"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_agree"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="40dp"
                android:background="@drawable/dialog_agree_bg"
                android:gravity="center"
                android:text="@string/dialog_first_agree"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_not_agree"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/dialog_first_disagree"
                android:textColor="@color/black_001"
                android:textSize="15sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
