<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_outside_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_input_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <EditText
            android:id="@+id/et_input_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="top"
            android:hint="@string/talk_something"
            android:imeOptions="flagNoExtractUi"
            android:lineSpacingMultiplier="1.2"
            android:maxLength="2000"
            android:maxLines="6"
            android:minHeight="104dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:scrollbars="vertical"
            android:textColor="#FF333333"
            android:textColorHint="@color/gray_006"
            android:textSize="14sp"
            tools:ignore="InvalidImeActionId" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/tv_num"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_two_hundred"
                android:textColor="@color/gray_006" />

            <TextView
                android:id="@+id/tv_sure"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_alignParentEnd="true"
                android:layout_width="50dp"
                android:layout_height="28dp"
                android:gravity="center"
                android:background="@drawable/btn_send_normal"
                android:text="@string/sure"
                android:textColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>