<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    app:cardCornerRadius="15dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <TextView
            android:visibility="visible"
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="2dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:textColor="@color/black_001"
            android:textSize="15sp"/>
        <EditText
            android:visibility="gone"
            android:id="@+id/et_title"
            android:background="@drawable/bg_et_nickname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:lineSpacingExtra="2dp"
            android:layout_marginBottom="20dp"
            android:maxLines="1"
            android:maxLength="10"
            android:textColor="@color/black_001"
            android:textColorHint="@color/gray_004"
            android:gravity="center"
            android:hint="@string/input_qsr"
            android:textSize="15sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EEEEEE"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/tv_cancel"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/black_001"
                android:layout_gravity="center"
                android:background="@drawable/dialog_action_bg"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#EEEEEE"/>
            <TextView
                android:id="@+id/tv_sure"
                android:text="@string/sure"
                android:textSize="16sp"
                android:gravity="center"
                android:background="@drawable/dialog_action_bg"
                android:textColor="@color/black_001"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>
